--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <title>title</title>
+    <meta charset="utf-8" />
+    <title>Fluff's Garage</title>
+
+    <!-- Import the webpage's stylesheet -->
+    <link rel="stylesheet" href="/style.css" />
+
+    <!-- Import the webpage's javascript file -->
+    <script src="/script.js" defer></script>
   </head>
   <body>
-    <h1>Fluff's Garage</h1>
+    <div id="title">
+      <h1>Fluff's Garage</h1>
+      <i>Personal site for hosting my several projects</i><br><br>
+    </div>
   </body>
 </html>
