--- a/minecraft.html
+++ b/minecraft.html
@@ -20,7 +20,7 @@
     <br/>
 
     <div id="title">
-      <h1>Mincraft</h1>
+      <h1>Minecraft</h1>
       <i>Fun little datapacks/commands I've made on my own time</i><br /><br />
     </div>
     
