--- a/index.html
+++ b/index.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <title>Fluff's Garage</title>
 
-    <!-- Import the webpage's stylesheet -->
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <div class="topnav">
-      <a href="index.html" class="active">Home</a>
-      <a href="projects.html">Projects</a>
-      <a href="minecraft.html">Minecraft</a>
-      <a href="discord.html">Discord</a>
-    </div>
-    
-    <br/>
-    <br/>
-    <br/>
+<head>
+  <meta charset="utf-8" />
+  <title>Luke Willis</title>
 
-    <div id="title">
-      <h1>Fluff's Garage</h1>
-      <i>Personal site for hosting my several projects</i><br /><br />
-    </div>
-    
-    <br />
-    Hi! I'm SirFluff, a coding enthusiast focused on webdev.<br />
-    I like working with javascript, and have made a couple things for fun.<br />
-    Consider checking them out!
-  </body>
+  <!-- Import the webpage's stylesheet -->
+  <link rel="stylesheet" href="style.css" />
+</head>
+
+<body>
+  <div class="topnav">
+    <a href="index.html" class="active">Home</a>
+    <a href="projects.html">Projects</a>
+    <a href="minecraft.html">Minecraft</a>
+    <a href="discord.html">Discord</a>
+  </div>
+
+  <br />
+  <br />
+  <br />
+
+  <div id="title">
+    <h1>Fluff's Garage</h1>
+    <i>Personal site for hosting my several projects</i><br /><br />
+  </div>
+
+  <br />
+  Hi! I'm SirFluff, a coding enthusiast focused on webdev.<br />
+  I like working with javascript, and have made a couple things for fun.<br />
+  Consider checking them out!
+</body>
+
 </html>
