Finished projects tab

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
 
-  <script defer src="page-manager.js"></script>
+  <script defer src="index.js"></script>
   <title>Luke Willis</title>
 </head>
 
@@ -72,9 +72,8 @@
         I've been learning to program! It can be a bit difficult sometimes, but it's 100 percent worth it.<br><br>I'm
         fluent in JavaScript, I know a little C++, and I'm currently learning the Rust programming language.<br><br>I
         also love to act! I'm not particularly great in the singing or dancing department, but I like to think I'm
-        pretty funny.Granted, I'm not the most skilled out there, but it certainly is fun.<br><br>If you want to contact
-        me, my e-mail is willisluke262@gmail.com. I can't guarantee I'll respond, but I'll do my
-        best!
+        pretty funny. Granted, I'm not the most skilled out there, but it certainly is fun.<br><br>If you want to
+        contact me, my e-mail is willisluke262@gmail.com. I can't guarantee I'll respond, but I'll do my best!
       </p>
     </div>
 
@@ -82,11 +81,43 @@
   </main>
 
   <main class="page" id="projects" hidden>
-    My projects
+
+    <div class="project">
+      <h3>Nameless Sky</h3>
+      <p>What if Final fantasy from the Super Nintendo was a sandbox game? That's what this game is. Or, at least what
+        it'll hopefully be. It's still a work in progress. It's being made in Rust, which I'm still learning as of right
+        now.</p>
+      <img src="./img/nameless-sky.png"><i>Screenshot from the old JavaScript version of the game (<a
+          href="http://sirfluffdev.github.io/nameless-sky">HERE</a> if you're interested!)</i>
+    </div>
+
+    <div class="project">
+      <h3>Farm Galaxy</h3>
+      <p>Imagine if stardew valley was also a space exploration game. Wouldn't that be something? This is mostly just an
+        idea as of right now, but there is an OST being made for it by my good friend, C3aloeV.</p>
+      <i>This hasn't really been worked on yet, so no image. Sorry!</i>
+    </div>
+
+    <div class="project">
+      <h3>LukeTunes</h3>
+      <p>A simple MP3 player and organizer. Haven't made it yet, but I do need an app like it; so I figured I could make
+        one.</p>
+      <i>This hasn't really been worked on yet, so no image. Sorry!</i>
+    </div>
+
+    <div class="project">
+      <h3>Sonic The Hedgehog GB</h3>
+      <p>I thought it might be fun to make a Sonic The Hedgehog game in the style of the gameboy. So I did. More of a
+        tech demo than anything else, but still pretty nifty!</p>
+      <img src="./img/gb-sonic.png">
+      <i>Uh... we goin' somewhere?</i>
+    </div>
+
   </main>
 
   <main class="page" id="misc" hidden>
-    Misc stuff
+    Looking for something?<br>
+    Yeah, nothing's here yet. There might be soon though, so keep your eyes peeled!
   </main>
 
   <!-- Back button for pages -->
